--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   cron:
-    image: fballiano/magento2-cron
+    image: nutellinoit/magento2-cron
     depends_on:
       - apache
       - varnish
@@ -17,17 +17,9 @@ services:
       # Enable the next line if you want to add a custom php.ini
       #- ./php.ini:/usr/local/etc/php/conf.d/999-customphp.ini
 
-  ssl:
-    image: fballiano/nginx-ssl-for-magento2
-    depends_on:
-      - varnish
-    links:
-      - varnish
-    ports:
-      - "443:443"
 
   varnish:
-    image: fballiano/varnish
+    image: nutellinoit/varnish
     ports:
       - "80:80"
       - "6082:6082"
@@ -42,7 +34,7 @@ services:
       - CACHE_SIZE=256M
 
   apache:
-    image: fballiano/magento2-apache-php
+    image: nutellinoit/magento2-apache-php
     depends_on:
       - db
       - cache
@@ -70,10 +62,10 @@ services:
       - MYSQL_PASSWORD=magento2
 
   cache:
-    image: fballiano/redis-volatile
+    image: nutellinoit/redis-volatile
 
   clusterdata:
-    image: fballiano/redis-volatile
+    image: nutellinoit/redis-volatile
 
 volumes:
   dbdata:
