--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       - ./varnish.secret:/varnish.secret
       # Enable the next line if you want to add a custom php.ini
       #- ./php.ini:/usr/local/etc/php/conf.d/999-customphp.ini
+    networks:
+      main:
+        aliases:
+          - cron
 
 
   varnish:
@@ -32,7 +36,10 @@ services:
       - ./varnish.secret:/etc/varnish/secret
     environment:
       - CACHE_SIZE=256M
-
+    networks:
+      main:
+        aliases:
+          - varnish
   apache:
     image: nutellinoit/magento2-apache-php
     depends_on:
@@ -48,24 +55,43 @@ services:
       - ~/.composer/auth.json:/root/.composer/auth.json
       # Enable the next line if you want to add a custom php.ini
       #- ./php.ini:/usr/local/etc/php/conf.d/999-customphp.ini
+    networks:
+      main:
+        aliases:
+          - apache
 
   db:
     image: mariadb
     ports:
       - "3306:3306"
     volumes:
-      - dbdata:/var/lib/mysql
+      - ./dbdata:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=magento2
       - MYSQL_DATABASE=magento2
       - MYSQL_USER=magento2
       - MYSQL_PASSWORD=magento2
+    networks:
+      main:
+        aliases:
+          - db
 
   cache:
     image: nutellinoit/redis-volatile
+    networks:
+      main:
+        aliases:
+          - cache
 
   clusterdata:
     image: nutellinoit/redis-volatile
+    networks:
+      main:
+        aliases:
+          - clusterdata
 
 volumes:
   dbdata:
+
+networks:
+  main:
